<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tic_tac_toe.WelcomeScreen">

    <TextView
        android:id="@+id/Text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:paddingBottom="30dp"
        android:text="@string/welcome_n_enjoy"
        android:textColor="#8B4513"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/Welcome_vectorDesc"
        android:src="@drawable/ic_tictactoe2" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="goToAboutScreen"
        android:text="@string/about"
        android:textColor="#A0522D"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goToModeScreen"
        android:text="@string/play"
        android:textColor="#A0522D"
        android:textStyle="bold" />

</RelativeLayout>
