<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._1P_5by5">

    <TableLayout
        android:id="@+id/_5by5Board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:padding="8dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button00"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button01"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button02"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button03"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button04"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button10"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button11"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button12"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button13"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button14"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button20"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button21"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button22"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button23"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button24"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button30"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button31"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button32"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button33"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button34"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button40"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button41"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button42"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button43"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/button44"
                style="@style/my_box5"
                android:layout_weight="1"
                android:text="" />


        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/infoGameState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text=" "
        android:textColor="#000000"
        android:textSize="28sp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/quitButton"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/my_button_shape"
        android:text="@string/resetButton"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/ScoreBoardButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/my_button_shape"
        android:text="@string/scoreboard"
        android:onClick="showScoreBoard"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/quitButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/ScoreBoardButton"
        android:layout_toRightOf="@id/ScoreBoardButton"
        android:background="@drawable/my_button_shape"
        android:text="@string/quit"
        android:textColor="#ffffff" />

</RelativeLayout>